# ZRA2025HA_TEAM_FRAUD_HUNTERS

./: .gitignore  CONTRIBUTING.md  PROJECT_SUMMARY.md  README.md  render.yaml  wsgi.py
web_app/: app.py
zra_chatbot/: .env.example  README.md  package.json  zax_web.py  zra-tax-chat.Modelfile
zra_chatbot/src/app/: layout.tsx  page.tsx
zra_sdk/: .env.example  README.md  __init__.py  pyproject.toml  render.yaml  requirements.txt  setup.py  vercel.json  wsgi.py
zra_sdk/api/: __init__.py  app.py  index.py  taxpayer_api.py
zra_sdk/core/: README.md  __init__.py  client.py  config.py
zra_sdk/core/tax_verification/: base_verifier.py  constants.py  exceptions.py  validators.py  vat_verifier.py  verifier.py
zra_sdk/core/taxpayer/: __init__.py  models.py  status.py
zra_sdk/demos/: basic_usage.py  test_compliance.py
zra_sdk/models/: README.md  __init__.py  taxpayer.py
zra_sdk/tests/: __init__.py
zra_sdk/utils/: __init__.py  validators.py
zra_sdk/web_app/: app.py
zra_sdk/web_app/static/: script.js  style.css
zra_sdk/web_app/templates/: index.html
