[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zra-sdk"
version = "0.1.0"
description = "Fraud Detection SDK for Zambia Revenue Authority"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Team Fraud Hunters" }
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=zra_sdk --cov-report=html --cov-report=term"
